create_executable(general_simple_sample
    general_simple_sample/general_simple_sample.cpp)
target_link_libraries(general_simple_sample
    eFFL)

create_executable(general_advanced_sample
    general_advanced_sample/general_advanced_sample.cpp)
target_link_libraries(general_advanced_sample
    eFFL)
